--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 *{
-    position: absolute;
     user-select: none;
 }
 body{
@@ -11,10 +10,12 @@ body{
 canvas{
     opacity: 0%;
     animation-name: fadeIn;
-    animation-duration: 1s;
+    animation-duration: 1.5s;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     animation-delay: 0.25s;
+    position: absolute;
+    z-index: -1;
 }
 h1{
     opacity: 0%;
@@ -23,6 +24,7 @@ h1{
     animation-duration: 1.5s;
     animation-timing-function: ease;
     animation-fill-mode: forwards;
+    position: absolute;
 }
 h2{
     opacity: 0%;
@@ -32,6 +34,7 @@ h2{
     animation-timing-function: ease;
     animation-fill-mode: forwards;
     animation-delay: 0.4s;
+    position: absolute;
 }
 @keyframes slideIn{
     0%{
